--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
   "homepage": "https://github.com/stackwar/js-sdk#readme",
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@babel/plugin-transform-classes": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-typescript": "^8.3.1",
     "rollup": "^2.70.1",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-uglify": "^6.0.4",
-    "typescript": "^4.6.3"
-  }
+    "tslib": "^2.3.1",
+    "typescript": "3.9.7"
+  },
+  "dependencies": {}
 }
